--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -4,7 +4,7 @@
     src: url('../fonts/Gilroy-Black.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Gilroy-Black.woff') format('woff'),
         url('../fonts/Gilroy-Black.ttf') format('truetype');
-    font-weight: normal;
+    font-weight: 900;
     font-style: normal;
 }
 
