--- a/src/css/style.css
+++ b/src/css/style.css
@@ -290,6 +290,7 @@ header {
     position: absolute;
     top: 157px;
     right: 66px;
+    width: 540px;
     /* border: 5px solid #FED763; */
 }
 
@@ -478,9 +479,9 @@ header {
     bottom: 84px;
 }
 
-@media (max-width: 1610px) {
+@media (max-width: 1640px) {
     .review__item {
-        padding: 20px 44px 0px 44px;
+        padding: 20px 25px 0px 25px;
         width: 434px;
         height: 700px;
     }
@@ -502,6 +503,7 @@ header {
     }
 
     .org__img {
+        width: 520px;
         right: 76px;
     }
 
@@ -802,7 +804,7 @@ header {
         }
     }
 
-    @media (max-width: 1230px) {
+    @media (max-width: 1235px) {
         .title {
             font-size: 50px;
         }
@@ -1094,7 +1096,7 @@ header {
         }
     }
 
-    @media (max-width: 1000px) {
+    @media (max-width: 1012px) {
         .capms__icon {
             height: 60px;
             right: 24px;
@@ -1734,4 +1736,490 @@ header {
         }
     }
 
+    @media (max-width: 530px) {
+        .title {
+            font-size: 40px;
+        }
+
+        .descr {
+            font-size: 19px;
+            line-height: 25px;
+        }
+
+        .title_big {
+            font-size: 60px;
+        }
+
+        header {
+            height: 50px;
+            padding: 5px 10px;
+        }
+
+        .menu__list {
+            margin-right: 23px;
+        }
+
+        .menu__i {
+            margin-left: 14px;
+        }
+
+        .menu__logo {
+            width: 35px;
+        }
+
+        .logo {
+            margin-right: 26px;
+            height: 100%;
+        }
+
+        .promo {
+            margin-top: 50px;
+            min-height: 716px;
+            background: url(../img/bg_promo_mobile.png) top -60px left -10px no-repeat, url(../img/black.png)
+        }
+
+        .subtitle_promo {
+            width: 260px;
+            font-size: 20px;
+        }
+
+        .promo__btn {
+            position: absolute;
+            width: 160px;
+            height: 44px;
+            top: 260px;
+            right: 60px;
+        }
+
+        .subtitle_btn_promo {
+            font-size: 22px;
+        }
+
+        .about {
+            padding: 25px 35px 35px 35px;
+        }
+
+        .descr_about {
+            margin: 15px 0 43px 0;
+        }
+
+        .descr_num {
+            font-size: 16px;
+            line-height: 17px;
+        }
+
+        .about__number_about {
+            margin-bottom: 15px;
+            width: 180px;
+        }
+
+        .about__numbers_org {
+            margin-left: 0;
+            max-width: 368px;
+        }
+
+        .about__number_org {
+            max-width: 168px
+        }
+
+        .title_org {
+            width: 400px;
+        }
+
+        .org__img {
+            width: 170px;
+            display: block;
+            right: 46px;
+            top: 360px;
+        }
+
+        .title_mini {
+            font-size: 30px;
+        }
+
+        .org {
+            padding: 25px 25px 85px 35px;
+        }
+
+        .format {
+            padding: 25px 25px 85px 25px;
+        }
+
+        .format__item {
+            width: 400px;
+            height: 325px;
+        }
+
+        .format__item3 {
+            margin-top: -60px;
+        }
+
+        .format__item4 {
+            margin-top: -20px;
+        }
+
+        .review {
+            padding: 25px 30px 55px 30px;
+        }
+
+        .review__item {
+            padding: 16px 20px 0px 20px;
+            width: 100%;
+            height: 520px;
+            margin-bottom: 20px;
+        }
+
+        .title_name {
+            font-size: 30px;
+        }
+
+        .camps__item2 {
+            display: none;
+        }
+
+        .capms__icon {
+            height: 50px;
+            right: 84px;
+            bottom: 27%;
+        }
+
+        .descr_faq {
+            font-size: 13px;
+        }
+
+        .faq__icon {
+            right: 15px;
+            bottom: 12px;
+            width: 25px;
+        }
+
+        .faq__item {
+            height: 40px;
+            margin-bottom: 23px;
+            padding-top: 8px;
+        }
+
+        .title_bottom {
+            display: none;
+            width: 200px;
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        .subtitle_bottom {
+            font-size: 16px;
+        }
+
+        .bottom {
+            padding: 20px 10px 25px 37px;
+        }
+
+        .bottom__btn {
+            right: 36px;
+            bottom: 18px;
+            width: 120px;
+            height: 32px;
+        }
+
+        .subtitle_btn_bottom {
+            font-size: 16px;
+        }
+    }
+
+    @media (max-width: 445px) {
+        .title {
+            font-size: 33px;
+        }
+
+        .descr {
+            font-size: 17px;
+            line-height: 25px;
+        }
+
+        .title_big {
+            font-size: 53px;
+        }
+
+        .promo__content {
+            margin-left: 48px;
+        }
+
+        .promo {
+            margin-top: 50px;
+            min-height: 696px;
+            background: url(../img/bg_promo_mobile.png) top -80px left -55px no-repeat, url(../img/black.png)
+        }
+
+        .subtitle_promo {
+            width: 260px;
+            font-size: 18px;
+        }
+
+        .promo__btn {
+            top: 240px;
+            right: 60px;
+        }
+
+        .about {
+            padding: 25px 25px 35px 25px;
+        }
+
+        .descr_about {
+            margin: 15px 0 43px 0;
+        }
+
+        .descr_num {
+            font-size: 16px;
+            line-height: 17px;
+        }
+
+        .about__number_about {
+            margin-bottom: 15px;
+            width: 150px;
+        }
+
+        .sep_green {
+            width: 100px;
+        }
+
+        .sep_red {
+            width: 100px;
+        }
+
+        .about__numbers_org {
+            margin-left: 0;
+            max-width: 328px;
+        }
+
+        .about__number_org {
+            max-width: 188px
+        }
+
+        .descr_org {
+            width: 300px;
+        }
+
+        .title_org {
+            margin: 0 auto;
+            width: 300px;
+        }
+
+        .org__img {
+            width: 140px;
+            display: block;
+            right: 16px;
+            top: 330px;
+        }
+
+        .title_mini {
+            font-size: 25px;
+        }
+
+        .org {
+            padding: 25px 25px 85px 35px;
+        }
+
+        .format {
+            padding: 25px 25px 65px 25px;
+        }
+
+        .text {
+            font-size: 14px;
+        }
+
+        .format__item {
+            width: 400px;
+            height: 325px;
+        }
+
+        .format__item3 {
+            margin-top: -60px;
+        }
+
+        .format__item4 {
+            margin-top: -20px;
+        }
+
+        .review {
+            padding: 25px 15px 35px 15px;
+        }
+
+        .review__item {
+            padding: 16px 20px 0px 20px;
+            width: 100%;
+            height: 520px;
+            margin-bottom: 20px;
+        }
+
+        .subtitle_name {
+            width: 200px;
+            font-size: 13px;
+        }
+
+        .subtitle_name_small {
+            width: 200px;
+            font-size: 13px;
+        }
+
+        .review__img {
+            width: 120px;
+        }
+
+        .title_name {
+            font-size: 27px;
+        }
+
+        .text_rev {
+            font-size: 12px;
+        }
+
+        .camps {
+            padding: 25px 15px 35px 15px;
+        }
+
+        .capms__icon {
+            height: 50px;
+            right: 64px;
+            bottom: 27%;
+        }
+
+        .descr_faq {
+            font-size: 10px;
+        }
+
+        .faq {
+            padding: 25px 25px 35px 25px;
+        }
+
+        .subtitle_bottom {
+            font-size: 14px;
+        }
+
+        .bottom {
+            padding: 20px 10px 25px 17px;
+        }
+
+        .bottom__btn {
+            right: 16px;
+        }
+    }
+
+    @media (max-width: 365px) {
+        .menu__a {
+            font-size: 14px;
+        }
+
+        .menu__list {
+            margin-right: 17px;
+        }
+
+        .menu__i {
+            margin-left: 12px;
+        }
+
+        .menu__logo {
+            width: 30px;
+        }
+
+        .logo {
+            margin-right: 22px;
+            height: 90%;
+        }
+
+        .about__number_about {
+            margin-bottom: 15px;
+            width: 135px;
+        }
+
+        .about__numbers_org {
+            margin-left: 0;
+            max-width: 268px;
+        }
+
+        .about__number_org {
+            max-width: 138px
+        }
+
+        .descr_org {
+            width: 280px;
+        }
+
+        .descr_num_red {
+            width: 120px;
+            font-size: 14px;
+        }
+
+        .title_org {
+            margin: 0 auto;
+            width: 260px;
+        }
+
+        .org__img {
+            width: 120px;
+            display: block;
+            right: 26px;
+            top: 355px;
+        }
+
+        .capms__icon {
+            height: 50px;
+            right: 44px;
+            bottom: 27%;
+        }
+
+        .descr_faq {
+            font-size: 10px;
+        }
+
+        .faq {
+            padding: 25px 15px 35px 15px;
+        }
+
+        .faq__icon {
+            right: 10px;
+            bottom: 12px;
+            width: 22px;
+        }
+
+        .subtitle_bottom {
+            font-size: 13px;
+        }
+
+        .bottom {
+            padding: 15px 10px 15px 17px;
+        }
+
+        .bottom__btn {
+            right: 10px;
+            bottom: 10px;
+            width: 100px;
+            height: 26px;
+        }
+
+        .subtitle_btn_bottom {
+            font-size: 13px;
+        }
+
+        .title_name {
+            font-size: 24px;
+        }
+
+        .text_rev {
+            font-size: 11px;
+        }
+
+        .subtitle_name {
+            width: 200px;
+            font-size: 11px;
+        }
+
+        .subtitle_name_small {
+            width: 200px;
+            font-size: 11px;
+        }
+
+        .review__item {
+            border: 4px solid #FFF2E0;
+        }
+    }
 }
