--- a/src/css/style.css
+++ b/src/css/style.css
@@ -390,8 +390,7 @@ header {
 }
 
 .camps {
-    position: relative;
-    padding: 51px 100px 76px 100px;
+    padding: 51px 173px 76px 173px;
     background: #A8AFFE;
 }
 
@@ -402,23 +401,19 @@ header {
 
 .camps__wrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .camps__item {
     position: relative;
-    width: 420px;
-    height: 420px;
+    width: 350px;
+    height: 350px;
     background: #FFF2E0;
     border: 10px solid #008264;
-    border-radius: 60px;
-    padding: 65px 0;
-}
-
-.capms__icon {
-    position: absolute;
-    right: 34px;
-    bottom: 35%;
+    border-radius: 20px;
+    margin-bottom: 65px;
+    padding-top: 36px;
 }
 
 .camps__img {
@@ -426,8 +421,14 @@ header {
     margin: 0 auto;
 }
 
+.uris,
+.mos {
+    margin-top: 40px;
+}
+
 .orl {
     margin-top: -40px;
+    height: 250px;
 }
 
 .faq {
@@ -477,6 +478,11 @@ header {
     position: absolute;
     right: 65px;
     bottom: 84px;
+}
+
+span {
+    font-weight: 1000;
+    font-size: 46px;
 }
 
 @media (max-width: 1640px) {
@@ -530,10 +536,6 @@ header {
 }
 
 @media (max-width: 1510px) {
-    .capms__icon {
-        bottom: 40%;
-    }
-
     .title {
         font-size: 65px;
     }
@@ -632,37 +634,16 @@ header {
         margin-bottom: 65px;
     }
 
-    .camps__wrapper {
-        display: flex;
-        justify-content: space-between;
-    }
-
     .camps__item {
-        width: 360px;
-        height: 360px;
+        width: 340px;
+        height: 340px;
         border: 8px solid #008264;
-        border-radius: 60px;
-        padding: 45px 0;
-    }
-
-
-    .camps__img {
-        display: block;
-        margin: 0 auto;
+        padding-top: 26px;
     }
 
     .orl {
-        margin-top: -30px;
-        height: 250px;
-    }
-
-    .vhs {
-        margin-top: 20px;
-        width: 300px;
-    }
-
-    .dano {
-        width: 170px;
+        margin-top: -20px;
+        height: 230px;
     }
 
     .title_name {
@@ -706,6 +687,10 @@ header {
         border: 6px solid #FFF2E0;
         right: 65px;
         bottom: 44px;
+    }
+
+    span {
+        font-size: 35px;
     }
 
     @media (max-width: 1440px) {
@@ -780,9 +765,12 @@ header {
         .camps__item {
             width: 300px;
             height: 300px;
-            border: 6px solid #008264;
-            border-radius: 60px;
-            padding: 35px 0;
+        }
+
+        .uris,
+        .mos {
+            width: 250px;
+            margin-top: 30px;
         }
 
         .orl {
@@ -790,8 +778,13 @@ header {
             height: 200px;
         }
 
-        .vhs {
-            width: 280px;
+        .soft,
+        .euro {
+            height: 180px;
+        }
+
+        .lesh {
+            width: 220px;
         }
 
         .descr_site {
@@ -963,17 +956,24 @@ header {
             height: 270px;
         }
 
-        .dano {
-            width: 150px;
-        }
-
         .orl {
             margin-top: -10px;
             height: 170px;
         }
 
-        .vhs {
-            width: 250px;
+        .uris,
+        .mos {
+            width: 220px;
+            margin-top: 30px;
+        }
+
+        .soft,
+        .euro {
+            height: 160px;
+        }
+
+        .lesh {
+            width: 190px;
         }
 
         .faq__item {
@@ -1017,6 +1017,10 @@ header {
         .sep_red {
             width: 150px;
             border-top: 4px solid #F98D89;
+        }
+
+        span {
+            font-size: 28px;
         }
     }
 
@@ -1064,12 +1068,9 @@ header {
         }
 
         .camps__item {
+            padding-top: 20px;
             width: 240px;
             height: 240px;
-        }
-
-        .dano {
-            width: 120px;
         }
 
         .orl {
@@ -1077,8 +1078,23 @@ header {
             height: 140px;
         }
 
-        .vhs {
-            width: 200px;
+        .uris,
+        .mos {
+            width: 190px;
+            margin-top: 20px;
+        }
+
+        .uris {
+            margin-top: 30px;
+        }
+
+        .soft,
+        .euro {
+            height: 140px;
+        }
+
+        .lesh {
+            width: 170px;
         }
 
         .org__img {
@@ -1097,12 +1113,6 @@ header {
     }
 
     @media (max-width: 1012px) {
-        .capms__icon {
-            height: 60px;
-            right: 24px;
-            bottom: 33%;
-        }
-
         .menu__list {
             margin-right: 63px;
         }
@@ -1246,23 +1256,32 @@ header {
         }
 
         .camps__item {
-            width: 200px;
-            height: 200px;
-            border-radius: 30px;
+            width: 210px;
+            height: 210px;
         }
 
-        .dano {
-            width: 100px;
+        .uris,
+        .mos {
+            width: 170px;
+            margin-top: 20px;
+        }
+
+        .uris {
+            margin-top: 30px;
+        }
+
+        .soft,
+        .euro {
+            height: 120px;
+        }
+
+        .lesh {
+            width: 150px;
         }
 
         .orl {
             margin-top: -10px;
-            height: 110px;
-        }
-
-        .vhs {
-            margin-top: 5px;
-            width: 180px;
+            height: 140px;
         }
 
         .title_bottom {
@@ -1297,15 +1316,13 @@ header {
         .camps {
             padding: 21px 80px 46px 80px;
         }
+
+        span {
+            font-size: 25px;
+        }
     }
 
     @media (max-width: 825px) {
-        .capms__icon {
-            height: 50px;
-            right: 24px;
-            bottom: 30%;
-        }
-
         .menu__list {
             margin-right: 43px;
         }
@@ -1371,24 +1388,32 @@ header {
         }
 
         .camps__item {
-            width: 170px;
-            height: 170px;
-            border-radius: 20px;
-            padding: 25px 0;
-        }
-
-        .dano {
-            width: 80px;
+            width: 180px;
+            height: 180px;
         }
 
         .orl {
-            margin-top: -10px;
+            margin-top: -15px;
+            height: 120px;
+        }
+
+        .uris,
+        .mos {
+            width: 150px;
+            margin-top: 20px;
+        }
+
+        .uris {
+            margin-top: 30px;
+        }
+
+        .soft,
+        .euro {
             height: 100px;
         }
 
-        .vhs {
-            margin-top: 5px;
-            width: 160px;
+        .lesh {
+            width: 130px;
         }
 
         .faq {
@@ -1519,12 +1544,33 @@ header {
             font-size: 25px;
         }
 
-        .camps__wrapper {
-            justify-content: space-around;
+        .camps__item {
+            width: 200px;
+            height: 200px;
         }
 
-        .camps__item3 {
-            display: none;
+        .orl {
+            margin-top: -15px;
+            height: 140px;
+        }
+
+        .uris,
+        .mos {
+            width: 160px;
+            margin-top: 20px;
+        }
+
+        .uris {
+            margin-top: 30px;
+        }
+
+        .soft,
+        .euro {
+            height: 120px;
+        }
+
+        .lesh {
+            width: 150px;
         }
 
         .title_faq {
@@ -1566,6 +1612,10 @@ header {
         .bottom__btn {
             right: 25px;
             bottom: 20px;
+        }
+
+        span {
+            font-size: 22px;
         }
     }
 
@@ -1693,18 +1743,37 @@ header {
             font-size: 30px;
         }
 
+        .camps__item {
+            width: 160px;
+            height: 160px;
+        }
+
+        .orl {
+            margin-top: -18px;
+            height: 110px;
+        }
+
+        .uris,
+        .mos {
+            width: 110px;
+            margin-top: 20px;
+        }
+
+        .soft,
+        .euro {
+            height: 80px;
+        }
+
+        .lesh {
+            width: 100px;
+        }
+
         .title_name {
             font-size: 30px;
         }
 
         .descr_faq {
             font-size: 16px;
-        }
-
-        .capms__icon {
-            height: 50px;
-            right: 24px;
-            bottom: 24%;
         }
 
         .title_bottom {
@@ -1733,6 +1802,10 @@ header {
 
         .faq {
             padding: 20px 36px 35px 36px;
+        }
+
+        span {
+            font-size: 24px;
         }
     }
 
@@ -1775,7 +1848,7 @@ header {
         .promo {
             margin-top: 50px;
             min-height: 716px;
-            background: url(../img/bg_promo_mobile.png) top -60px left -10px no-repeat, url(../img/black.png)
+            background: url(../img/bg_promo_mobile.png) top -60px left -10px no-repeat, url(../img/black.png);
         }
 
         .subtitle_promo {
@@ -1819,7 +1892,7 @@ header {
         }
 
         .about__number_org {
-            max-width: 168px
+            max-width: 168px;
         }
 
         .title_org {
@@ -1873,14 +1946,31 @@ header {
             font-size: 30px;
         }
 
-        .camps__item2 {
-            display: none;
+        .camps__item {
+            padding-top: 15px;
+            width: 137px;
+            height: 137px;
+            border: 4px solid #008264;
         }
 
-        .capms__icon {
-            height: 50px;
-            right: 84px;
-            bottom: 27%;
+        .orl {
+            margin-top: -12px;
+            height: 90px;
+        }
+
+        .uris,
+        .mos {
+            width: 110px;
+            margin-top: 15px;
+        }
+
+        .soft,
+        .euro {
+            height: 70px;
+        }
+
+        .lesh {
+            width: 100px;
         }
 
         .descr_faq {
@@ -1924,6 +2014,10 @@ header {
         .subtitle_btn_bottom {
             font-size: 16px;
         }
+
+        span {
+            font-size: 22px;
+        }
     }
 
     @media (max-width: 445px) {
@@ -1947,7 +2041,7 @@ header {
         .promo {
             margin-top: 50px;
             min-height: 696px;
-            background: url(../img/bg_promo_mobile.png) top -80px left -55px no-repeat, url(../img/black.png)
+            background: url(../img/bg_promo_mobile.png) top -80px left -55px no-repeat, url(../img/black.png);
         }
 
         .subtitle_promo {
@@ -2008,7 +2102,7 @@ header {
             width: 140px;
             display: block;
             right: 16px;
-            top: 330px;
+            top: 350px;
         }
 
         .title_mini {
@@ -2074,13 +2168,7 @@ header {
         }
 
         .camps {
-            padding: 25px 15px 35px 15px;
-        }
-
-        .capms__icon {
-            height: 50px;
-            right: 64px;
-            bottom: 27%;
+            padding: 25px 20px 35px 20px;
         }
 
         .descr_faq {
@@ -2101,6 +2189,10 @@ header {
 
         .bottom__btn {
             right: 16px;
+        }
+
+        span {
+            font-size: 21px;
         }
     }
 
@@ -2159,12 +2251,6 @@ header {
             display: block;
             right: 26px;
             top: 355px;
-        }
-
-        .capms__icon {
-            height: 50px;
-            right: 44px;
-            bottom: 27%;
         }
 
         .descr_faq {
